syntax = "proto3";
package prism.icstaking;

import "gogoproto/gogo.proto";
import "prism/icstaking/host_chain.proto";
import "prism/icstaking/params.proto";
import "prism/icstaking/undelegation.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/prism-finance/prism-core/x/icstaking/types";

// GenesisState defines the icstaking module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  repeated HostChain host_chain_list = 3 [(gogoproto.nullable) = false];
  repeated HostChainState host_chain_state_list = 4 [(gogoproto.nullable) = false];
  repeated Undelegation undelegation_list = 5 [(gogoproto.nullable) = false];
  repeated ChannelUndelegation channel_undelegation_list = 6 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
